# yz-transcript

./: .gitignore  CHANGELOG.md  README.md  manifest.json  pyproject.toml
.github/workflows/: release.yml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: install-to-frontend.mjs  vite-lib.mjs
ui/src/: App.tsx  TranscriptPage.tsx  index.ts  types.ts
ui/src/components/: ConfirmDialog.tsx  EntryList.tsx  SearchBar.tsx  SearchResults.tsx  StateWidget.tsx  StatusStrip.tsx
ui/src/hooks/: useTranscript.ts
ui/src/lib/: api.ts  capabilities.tsx  ws.tsx
yz_transcript/: __init__.py  __main__.py  observer.py  persistent_settings.py  server.py  settings.py
yz_transcript/core/: __init__.py  index.py  store.py
yz_transcript/static/: index.html
yz_transcript/static/assets/: index-3_w4nnUc.js  index-C11t2sAx.js  index-DxSqi294.js
